# kuberly-skills

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  apm.yml  bitbucket-pipelines.yml
agents/: agent-cicd.md  agent-infra-ops.md  agent-k8s-ops.md  agent-planner.md  agent-sre.md  app-cicd-engineer.md  findings-reconciler.md  iac-developer.md  infra-scope-planner.md  pr-reviewer-cold.md  pr-reviewer-in-context.md  pr-reviewer.md  terragrunt-plan-reviewer.md  troubleshooter.md
agents-opencode/: agent-cicd.md  agent-infra-ops.md  agent-k8s-ops.md  agent-planner.md  agent-sre.md  findings-reconciler.md  pr-reviewer.md  terragrunt-plan-reviewer.md
docs/: AGENT_SESSIONS.md  CONTRIBUTING.md  GRAPH_ENRICHMENT_DESIGN.md  RUNTIME_SKILLS.md
mcp/kuberly-graph/: Dockerfile  README.md  TOOLS.md  kuberly_graph.py  pyproject.toml  test_kuberly_graph.py
mcp/kuberly-graph/src/kuberly_graph/: __init__.py  __main__.py  cache.py  cli.py  client.py  orchestrator.py  refresh_cli.py  server.py  state_extract.py
mcp/kuberly-graph/src/kuberly_graph/dashboard/: __init__.py  api.py  routes.py
mcp/kuberly-graph/src/kuberly_graph/dashboard/static/: app.js  index.html  style.css
mcp/kuberly-graph/src/kuberly_graph/graph/: __init__.py  rustworkx_graph.py
mcp/kuberly-graph/src/kuberly_graph/layers/: __init__.py  _pf.py  _util.py  alert.py  applications.py  argo.py  aws.py  base.py  code.py  cold.py  compliance.py  components.py  cost.py  dependency.py  dns.py  iam.py  image_build.py  k8s.py  kubectl.py  logs.py  meta.py  metrics.py  network.py  rendered.py  secrets.py  state.py  storage.py  traces.py  treesitter.py
mcp/kuberly-graph/src/kuberly_graph/store/: __init__.py  _mcp_discovery.py  lance.py  memory.py
mcp/kuberly-graph/src/kuberly_graph/tools/: __init__.py  analytics.py  aws.py  code.py  fusion.py  image_build.py  infra.py  meta.py  orchestrate.py  phase7d.py  platform.py  query.py  regenerate.py  semantic.py  super.py  troubleshoot.py
mcp/kuberly-graph/ui/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
mcp/kuberly-graph/ui/helm/kuberly-graph-ui/: Chart.yaml  values.yaml
mcp/kuberly-graph/ui/helm/kuberly-graph-ui/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
mcp/kuberly-graph/ui/src/: App.tsx  index.css  main.tsx
mcp/kuberly-graph/ui/src/api/: client.ts  types.ts
mcp/kuberly-graph/ui/src/components/: ArchGrid.tsx  DashboardCharts.tsx  Graph2DCosmos.tsx  GraphSidebar.tsx  Header.tsx  KPIRow.tsx  NodeSpotlight.tsx  OverlaysStrip.tsx
mcp/kuberly-graph/ui/src/lib/: awsIcons.ts  categories.ts  d3-force-3d.d.ts  forceSim.worker.ts  useElementSize.ts  useForceWorker.ts
mcp/kuberly-graph/ui/src/store/: uiStore.ts
mcp/kuberly-graph/ui/src/tabs/: DashboardTab.tsx  GraphTab.tsx
references/: README.md
scripts/: diff_apps.py  ensure_apm_skills.template.sh  ensure_mcp_venv.sh  init_agent_session.py  post_apm_install.sh  refresh_kuberly_overlays.sh  (+8 more)
(+73 files in other folders)
