[project]
name = "kuberly-graph"
version = "0.50.1"
description = "FastMCP microservice exposing a multi-layer Kuberly knowledge graph (cold IaC + live k8s/argo + logs/metrics/traces) over MCP."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27.0,<2.0.0",
  "rustworkx>=0.16.0,<1.0.0",
  "lancedb>=0.13.0,<1.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "pyarrow>=17.0.0,<22.0.0",
  # Phase 8H: AST-driven HCL/CUE/YAML/Dockerfile scan in TreeSitterLayer.
  # Pre-compiled grammars for HCL/YAML/Dockerfile/JSON ship in the wheel.
  # The wrapper is built against tree-sitter 0.21.x so we pin both for ABI
  # compatibility — newer tree-sitter (>=0.22) breaks Language() init.
  "tree_sitter==0.21.*",
  "tree_sitter_languages>=1.10.2",
]

[project.scripts]
kuberly-graph = "kuberly_graph.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kuberly_graph = ["dashboard/static/*"]
